Updated server code to work with new site, updated engine code to test first move before generating rest, fixed awful transpositions a/b pruning bug